02-distributed/todo-front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-front
  template:
    metadata:
      labels:
        app: todo-front
    spec:
      containers:
        - name: todo-front
          image: todo-front
          imagePullPolicy: Never
          ports:
            - containerPort: 80
