02-distributed/todo-front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-front
spec:
  type: ClusterIP
  selector:
    app: todo-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
